# Real-Estate-Voice-Agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conversation_test.py  lead_extractor.py  llm.py  main.py  models.py  properties.json  property_manager.py  pyproject.toml  requirements.txt  test_llm.py  test_tts.py  test_whisper.py  test_whisper_audio.py
.claude/commands/: wrap.md
static/: index.html
