[project]
name = "real-estate-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "tts>=0.22.0",
    "uvicorn>=0.40.0",
]
