[project]
name = "real-estate-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "google-genai>=0.3",
    "twilio>=9.0",
    "numpy>=1.26",
]
